# ai-agent

./: .dockerignore  .env.example  .gitignore  Features.md  README.md  docker-compose.yml  dockerfile
.github/: copilot-instructions.md
backend/: .gitignore  README.md  agent_graph.mmd  manage.py  pyproject.toml  verify_chat.py  verify_multidb.py  verify_search.py
backend/aichatbot/: asgi.py  db_router.py  middleware.py  settings.py  urls.py  utils.py  views.py  wsgi.py
backend/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
backend/chat/bot/: PydanticType.py  agent.py  inquiry.ipynb  llm.py  prompts.py
backend/chat/migrations/: 0001_initial.py  0002_alter_chatmessages_sender.py  0003_chatroom_extracted_attributes_and_more.py
backend/dummy/: populate.py
backend/llm/: llm.py
backend/organization/: admin.py  agent.py  models.py  search.py  serializers.py  signals.py  urls.py  views.py
backend/organization/management/commands/: dump_products.py  embed_products.py  load_products.py  migrate_all.py  visualize_agent.py
backend/organization/migrations/: 0001_initial.py  0002_botsettings_remove_products_description_and_more.py  0002_remove_botsettings_missing_attribute_prompt_and_more.py  0003_products_embedding.py  0004_alter_products_image.py  0005_botsettings_attribute_extraction_prompt_and_more.py
frontend/: .env.development  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  error.tsx  index.css  main.tsx  routeTree.gen.ts  routes.tsx
frontend/src/backendapi/: chatService.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: resizable.tsx
frontend/src/features/auth/components/: LoginCard.tsx
frontend/src/features/store/: index.ts
frontend/src/features/store/components/: StoreCard.tsx  StoreList.tsx
frontend/src/lib/: Axios.ts
frontend/src/pages/: chat.tsx  home.tsx  index.tsx  new_chat.tsx
frontend/src/routes/: __root.tsx  home.tsx  index.tsx
frontend/src/routes/$storeName/: chat.tsx
frontend/src/signals/: index.ts
